kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: django-todo
  name: django-todo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: django-todo
